# PRIO

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  system.md
config/: default.yaml
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: AccountCard.tsx  ActivityFeed.tsx  ControlPanel.tsx  DrawdownChart.tsx  EconomicCalendar.tsx  EquityCurve.tsx  KillSwitch.tsx  MLStatus.tsx  PositionsTable.tsx  SessionIndicator.tsx  SettingsPanel.tsx  SignalMatrix.tsx  SystemStatus.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: DashboardPage.tsx  PerformancePage.tsx  SettingsPage.tsx
dashboard/src/stores/: store.ts
scripts/: evaluate_regime.py
src/: main.py
src/api/: app.py  websocket.py
src/api/routes/: config.py  dashboard.py  system.py  trading.py
src/broker/: __init__.py  base.py  capitalcom.py
src/core/: config.py  events.py  logger.py  types.py
src/data/: __init__.py  calendar.py  db.py  features.py  indicators.py  pipeline.py  store.py  streaming.py
src/execution/: engine.py
src/notifications/: telegram.py
src/orchestrator/: trading_bot.py
src/risk/: checks.py  recovery.py  sizing.py  stops.py
src/strategy/: base.py  trend_following.py
src/utils/: backtest.py  logging.py  metrics.py  telegram.py
