[project]
name = "prio"
version = "0.1.0"
description = "Autonomous Forex Trading Bot with ML/RL"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    # HTTP Client (async)
    "httpx>=0.27.0",
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Database
    "aiosqlite>=0.20.0",
    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Telegram
    "python-telegram-bot>=21.0",
    # Logging
    "structlog>=24.0.0",
    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
